<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/background"
    tools:context=".MainActivity">

    <!-- ScrollView to make the page scrollable -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"> <!-- Ensures the ScrollView takes the entire screen -->

        <!-- Main container layout wrapped inside the ScrollView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <!-- TextView at the top -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="STUDYCORNER"
                android:fontFamily="sans-serif-black"
                android:textSize="25sp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Find a space to study"
                android:fontFamily="sans-serif"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="2dp"/>

            <!-- Horizontal ScrollView for images -->
            <HorizontalScrollView
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Placeholder Image 1 -->
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageView1"
                        android:layout_width="162dp"
                        android:layout_height="264dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/library_picture"
                        app:shapeAppearanceOverlay="@style/roundedImageView"
                        android:src="@drawable/ic_1t"
                        android:scaleType="centerCrop"
                        android:layout_margin="10dp"/>

                    <!-- Placeholder Image 2 -->
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageView2"
                        android:layout_width="162dp"
                        android:layout_height="264dp"
                        android:layout_margin="10dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/coffee_shop"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_2t"
                        app:shapeAppearanceOverlay="@style/roundedImageView" />

                    <!-- Placeholder Image 3 -->
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageView3"
                        android:layout_width="162dp"
                        android:layout_height="264dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/coworking_space"
                        app:shapeAppearanceOverlay="@style/roundedImageView"
                        android:src="@drawable/ic_3t"
                        android:scaleType="centerCrop"
                        android:layout_margin="10dp"/>

                </LinearLayout>
            </HorizontalScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- TextView -->
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Top Rated"
                    android:fontFamily="sans-serif"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_alignParentStart="true"/>

                <!--  TextView right side -->
                <TextView
                    android:id="@+id/textViewRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View All"
                    android:fontFamily="sans-serif"
                    android:textSize="15sp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_alignParentEnd="true"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true"
                 />

            </RelativeLayout>

            <HorizontalScrollView
                android:id="@+id/frame2"
                android:layout_width="match_parent"
                android:layout_height="196dp"
                android:layout_marginBottom="60dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">



                    <!-- Placeholder Image 3 -->
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/rated1"
                        android:layout_width="162dp"
                        android:layout_height="158dp"
                        android:layout_margin="10dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="rated1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_5t"
                        app:shapeAppearanceOverlay="@style/roundedImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/rated2"
                        android:layout_width="162dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="rated2"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_4t"
                        app:shapeAppearanceOverlay="@style/roundedImageView" />

                    <!-- Placeholder Image 6 -->
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/rated3"
                        android:layout_width="162dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="rated3"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_6t"
                        app:shapeAppearanceOverlay="@style/roundedImageView" />

                </LinearLayout>

            </HorizontalScrollView>


        </LinearLayout>
    </ScrollView>

    <!-- BottomNavigationView placed outside of ScrollView to keep it fixed at the bottom -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" />

</RelativeLayout>
